# dvelogames

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
dvelogames/: results.json  velogame_race.py  velogame_scrape.py
