[tool.poetry]
name = "dvelogames"
version = "0.1.0"
description = ""
authors = ["Edolfo <edolfo@hckrlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
matplotlib = "^3.9.1"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
bar-chart-race = "^0.1.0"
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pandas-stubs = "^2.2.2.240603"
types-requests = "^2.32.0.20240712"
types-beautifulsoup4 = "^4.12.0.20240511"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
